tests/errors/function_return_type_mismatch.dash
# Test function return type mismatch
pub my_func(): String! { 42 }